probe: ask the predicate through the interface, and record that CratonVM cannot answer it from Java
Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>